--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 
 <body>
 
-    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam repudiandae aliquid, expedita consequatur placeat illum, et sit nisi quo repellendus officia minus earum modi excepturi.</p>
+   <div id="data-container" class="container px-14">
+
+    <p> ID </p>
+    <h2> Title </h2>
+    <p>Description </p>
+    <p> User ID </p>
+   </div>
 
     <script src="js/mian.js"></script>
 </body>
